# WeServd-Webserver-

./: .README.md.swp  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  ServerTest  ServerTest.cpp  build.sh  build_tests.sh  default_config  default_test_config  test_config
Different-Idea/: Webserver-2.cpp
src/: request_handler.h  webserver.cpp
src/parser/: ConfigParser.cpp  FileServer.cpp  FileServer.hpp  ParserProcessor.cpp  ParserProcessor.h  config_parser.cc  config_parser.h
src/server/: EchoHandler.cpp  EchoHandler.h  EchoRequestHandler.cpp  EchoRequestHandler.h  FileRequestHandler.cpp  FileRequestHandler.h  MimeTypes.cpp  MimeTypes.h  NotFoundHandler.cpp  NotFoundHandler.h  ProxyHandler.cpp  ProxyHandler.h  RequestHandler.cpp  RequestHandler.h  Server.cpp  Server.h  StaticHandler.cpp  StaticHandler.h  config.cpp  config.h  header.h  mime_types.cpp  mime_types.h  reply.cpp  reply.h  request.h  request_handler.h
tests/: ProxyHandlerTest.cpp
tests/parser/: ParserProcessorTests.cpp  ServerTest.cpp  config_parser_test.cc  test_config
webserver_files/html/: assignment1.html  assignment2.html  assignment4.html
